--- a/index.html
+++ b/index.html
@@ -1,11 +1,363 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+
+<head> 
+<meta name="description" content="Explore advanced heavy machinery simulation training and services. HeavySim provides cutting-edge solutions for operator training, safety, and efficiency using virtual reality and simulation technologies.">
+<meta name="keywords" content="heavy machinery simulation, operator training, virtual reality training, heavy equipment simulators, safety training, machinery simulation services, VR training, construction equipment training, HeavySim">
+<title>Heavy Machinery Operations Simulation Services - HeavySim</title>
+<meta name="author" content="Stanislav Tsvitkov">
+<meta name="robots" content="index, follow">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta name="charset" content="UTF-8">
+
+
+  <!-- Favicons -->
+  <link href="assets/img/favicon.png" rel="icon">
+  <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
+
+  <!-- Fonts -->
+  <link href="https://fonts.googleapis.com" rel="preconnect">
+  <link href="https://fonts.gstatic.com" rel="preconnect" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+
+  <!-- Vendor CSS Files -->
+  <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+  <link href="assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
+  <link href="assets/vendor/aos/aos.css" rel="stylesheet">
+
+  <!-- Main CSS File -->
+  <link href="assets/css/main.css" rel="stylesheet">
+
+  <!-- =======================================================
+  * Template Name: Siimple
+  * Template URL: https://bootstrapmade.com/free-bootstrap-landing-page/
+  * Updated: Aug 07 2024 with Bootstrap v5.3.3
+  * Author: BootstrapMade.com
+  * License: https://bootstrapmade.com/license/
+  ======================================================== -->
 </head>
-<body>
-    HELLO WORLD
+
+<body class="index-page">
+
+  <header id="header" class="header d-flex align-items-center fixed-top">
+    <div class="container-fluid position-relative d-flex align-items-center justify-content-between">
+
+      <a href="index.html" class="logo d-flex align-items-center">
+        <!-- Uncomment the line below if you also wish to use an image logo -->
+        <img src="assets/img/logo.png" alt="logo" width="120px" height="80px">
+        <!-- <h1 class="sitename">MaqSim</h1> -->
+      </a>
+
+      <nav id="navmenu" class="navmenu">
+        <ul>
+          <li><a href="#hero" class="active">Home</a></li>
+          <li><a href="#about">About</a></li>
+          <li><a href="#why-us">Benefits</a></li>
+          <li><a href="#services">Services</a></li>
+          <li><a href="#contact">Contacts</a></li>
+        </ul>
+        <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
+      </nav>
+
+    </div>
+  </header>
+
+  <main class="main">
+
+    <!-- Hero Section -->
+    <section id="hero" class="hero section">
+
+      <img src="assets/img/excavator-action (2).jpg" alt="" data-aos="fade-in" class="">
+
+      <div class="container text-center" data-aos="fade-up" data-aos-delay="100">
+        <div class="row justify-content-center">
+          <div class="col-lg-8">
+            <h2><strong>Heavy Machinery Operations Simulation Services</strong></h2>
+            <p>Preparing for Reality through Virtual Experience: Risk-Free and with Maximum Efficiency</p>
+            <a href="#about" class="btn-get-started">More</a>
+          </div>
+        </div>
+      </div>
+
+    </section><!-- /Hero Section -->
+
+    <!-- About Section -->
+    <section id="about" class="about section">
+
+      <!-- Section Title -->
+      <div class="container section-title" data-aos="fade-up">
+        <h2>About</h2>
+        <p>We are a team of specialists in the fields of mining and education.</p>
+      </div><!-- End Section Title -->
+
+      <div class="container" data-aos="fade-up" data-aos-delay="100">
+
+        <div class="row gy-4">
+          <div class="col-lg-6">
+            <img src="assets/img/simulations.jpg" class="img-fluid" alt="">
+          </div>
+          <div class="col-lg-6 content">
+            <h3>Project Description</h3>
+            <p class="fst-italic">
+              Operating heavy machinery requires expensive and complex training, which few can afford. For many, learning on real equipment is inaccessible due to high fuel costs, safety risks and environmental pollution. Our solution, a heavy machinery operation simulator, makes this training accessible at a much lower cost, providing the opportunity to gain experience in a safe virtual environment. Through our simulator, we eliminate the risks of accidents and environmental impact. In addition, advanced mobile network technology, such as 5G, allows operators to work remotely, facilitating the operation of machinery anywhere in the world, promoting global competitiveness and democratizing access to this profession.
+            </p>
+            <p><b>Our service offers the following:</b></p>
+            <ul>
+              <li><i class="bi bi-check2-all"></i> <span><b>Realistic control joysticks:</b> Control devices very similar to those used in real heavy machinery, providing an authentic experience.</span></li>
+              <li><i class="bi bi-check2-all"></i> <span><b>Large, detailed displays:</b> High-resolution monitors display detailed graphics, allowing clear viewing of simulation environments.</span></li>
+              <li><i class="bi bi-check2-all"></i> <span><b>Advanced PCs with powerful graphics cards:</b> Latest generation computers designed to run simulations with high performance and without interruptions.</span></li>
+              <li><i class="bi bi-check2-all"></i> <span><b>Ergonomic and comfortable seats:</b> Ergonomically designed chairs that provide comfort during long training sessions.</span></li>
+              <li><i class="bi bi-check2-all"></i> <span><b>Modern simulation software:</b> Advanced simulation technology accurately replicates heavy machinery operations in a safe, controlled environment.</span></li>          
+            </ul>
+            <p>
+              Our service provides a complete and realistic training experience, with state-of-the-art equipment that facilitates effective and safe training. With our simulators, operators can practice and improve their skills without the risks and high costs of real machinery, preparing them to face the challenges of the sector in a professional and competitive manner.
+            </p>
+          </div>
+        </div>
+
+      </div>
+
+    </section><!-- /About Section -->
+
+    <!-- Why Us Section -->
+    <section id="why-us" class="why-us section">
+
+      <!-- Section Title -->
+      <div class="container section-title" data-aos="fade-up">
+        <h2>Benefits</h2>
+        <p>Our benefits are as follows:</p>
+      </div><!-- End Section Title -->
+
+      <div class="container">
+
+        <div class="row gy-4" data-aos="fade-up" data-aos-delay="100">
+
+          <div class="col-md-4">
+            <div class="card">
+              <div class="img">
+                <img src="assets/img/students.jpg" alt="" class="img-fluid">
+                <div class="icon"><i class="bi bi-wallet2"></i></div>
+              </div>
+              <h2 class="title"><a href="#" class="stretched-link">Affordable Prices</a></h2>
+              <p>
+                We offer high quality training at a much lower cost than traditional methods, making heavy machinery training accessible to everyone.
+              </p>
+            </div>
+          </div><!-- End Card Item -->
+
+          <div class="col-md-4" data-aos="fade-up" data-aos-delay="200">
+            <div class="card">
+              <div class="img">
+                <img src="assets/img/experience2.jpg" alt="" class="img-fluid">
+                <div class="icon"><i class="bi bi-joystick"></i></div>
+              </div>
+              <h2 class="title"><a href="#" class="stretched-link">Practical Experience</a></h2>
+              <p>
+                Our simulators provide a realistic, hands-on experience, allowing users to train in conditions similar to operating real machinery, but in a safe and controlled environment.
+              </p>
+            </div>
+          </div><!-- End Card Item -->
+
+          <div class="col-md-4" data-aos="fade-up" data-aos-delay="300">
+            <div class="card">
+              <div class="img">
+                <img src="assets/img/certificate.jpg" alt="" class="img-fluid">
+                <div class="icon"><i class="bi bi-patch-check"></i></div>
+              </div>
+              <h2 class="title"><a href="#" class="stretched-link">Professional Certification</a></h2>
+              <p>
+                Upon completion of the course (hours of work with simulators), clients receive a certification that they can add to their resume, improving their job opportunities in the heavy machinery sector.
+              </p>
+            </div>
+          </div><!-- End Card Item -->
+
+        </div>
+
+      </div>
+
+    </section><!-- /Why Us Section -->
+
+    <!-- Services Section -->
+    <section id="services" class="services section light-background">
+
+      <!-- Section Title -->
+      <div class="container section-title" data-aos="fade-up">
+        <h2>Services</h2>
+        <p>Our main services are presented below</p>
+      </div><!-- End Section Title -->
+
+      <div class="container">
+
+        <div class="row gy-4">
+
+          <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="100">
+            <div class="service-item  position-relative">
+              <div class="icon">
+                <i class="bi bi-truck"></i>
+              </div>
+              <a href="service-details.html" class="stretched-link">
+                <h3>Large Fleet of Machinery</h3>
+              </a>
+              <p>We have more than 70 units of heavy equipment, covering 24 industry-leading brands, allowing for diversified and comprehensive training.</p>
+            </div>
+          </div><!-- End Service Item -->
+
+          <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="200">
+            <div class="service-item position-relative">
+              <div class="icon">
+                <i class="bi bi-cloud-sun"></i>
+              </div>
+              <a href="service-details.html" class="stretched-link">
+                <h3>Realistic Tasks</h3>
+              </a>
+              <p>Simulations are designed to mirror real-life operating tasks such as excavation, grading and material handling, providing hands-on training that resembles working in the field.</p>
+            </div>
+          </div><!-- End Service Item -->
+
+          <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="300">
+            <div class="service-item position-relative">
+              <div class="icon">
+                <i class="bi bi-display"></i>
+              </div>
+              <a href="service-details.html" class="stretched-link">
+                <h3>Comprehensive Web Platform</h3>
+              </a>
+              <p>We have a web platform with personal access and a general panel, which allows the visualization of progress, the downloading of certificates and the management of user progress in an intuitive way.</p>
+            </div>
+          </div><!-- End Service Item -->
+
+          <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="400">
+            <div class="service-item position-relative">
+              <div class="icon">
+                <i class="bi bi-people"></i>
+              </div>
+              <a href="service-details.html" class="stretched-link">
+                <h3>Personalized Attention</h3>
+              </a>
+              <p>We provide personalized customer service to each client, providing constant support to help them achieve the best results and foster their professional development.</p>
+              <a href="service-details.html" class="stretched-link"></a>
+            </div>
+          </div><!-- End Service Item -->
+
+          <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="500">
+            <div class="service-item position-relative">
+              <div class="icon">
+                <i class="bi bi-inboxes"></i>
+              </div>
+              <a href="service-details.html" class="stretched-link">
+                <h3>Job Opportunities</h3>
+              </a>
+              <p>Companies post job offers on our platform, and our clients can send their CVs directly, facilitating their access to job opportunities in the industry.</p>
+              <a href="service-details.html" class="stretched-link"></a>
+            </div>
+          </div><!-- End Service Item -->
+
+          <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="600">
+            <div class="service-item position-relative">
+              <div class="icon">
+                <i class="bi bi-headset"></i>
+              </div>
+              <a href="service-details.html" class="stretched-link">
+                <h3>Support</h3>
+              </a>
+              <p>We provide ongoing technical and academic assistance, ensuring that operators have all the necessary support during their training, even after completing the course.</p>
+              <a href="service-details.html" class="stretched-link"></a>
+            </div>
+          </div><!-- End Service Item -->
+
+        </div>
+
+      </div>
+
+    </section><!-- /Services Section -->
+
+    <!-- Contact Section -->
+    <section id="contact" class="contact section">
+
+      <!-- Section Title -->
+      <div class="container section-title" data-aos="fade-up">
+        <h2>Contacts</h2>
+        <p>If you have any questions please contact us</p>
+      </div><!-- End Section Title -->
+
+      <div class="container" data-aos="fade-up" data-aos-delay="100">
+
+        <div class="row gy-4" data-aos="fade-up" data-aos-delay="200">
+
+          <div class="col-lg-4">
+            <div class="info-item d-flex flex-column justify-content-center align-items-center">
+              <i class="bi bi-geo-alt"></i>
+              <h3>Location</h3>
+              <p>Wilmington, Delaware</p>
+            </div>
+          </div><!-- End Info Item -->
+
+          <div class="col-lg-4">
+            <div class="info-item d-flex flex-column justify-content-center align-items-center info-item-borders">
+              <i class="bi bi-telephone"></i>
+              <h3>Call Us</h3>
+              <p><a href="" target="_blank">+1 401-965-5511</a>
+              </p>
+            </div>
+          </div><!-- End Info Item -->
+
+          <div class="col-lg-4">
+            <div class="info-item d-flex flex-column justify-content-center align-items-center">
+              <i class="bi bi-envelope"></i>
+              <h3>Email Us</h3>
+              <p><a href="mailto:info@mavateccorp.com" target="_blank">info@mavateccorp.com</a>
+              </p>
+            </div>
+          </div><!-- End Info Item -->
+
+        </div>
+
+      </div>
+
+    </section><!-- /Contact Section -->
+
+  </main>
+
+  <footer id="footer" class="footer light-background">
+    <div class="container">
+      <h3 class="sitename">HeavySim</h3>
+      <p>Heavy Machinery Operations Simulation Services</p>
+      <div class="social-links d-flex justify-content-center">
+<!--         <a href=""><i class="bi bi-twitter-x"></i></a>
+        <a href=""><i class="bi bi-facebook"></i></a>
+        <a href=""><i class="bi bi-instagram"></i></a>
+        <a href=""><i class="bi bi-skype"></i></a>
+        <a href=""><i class="bi bi-linkedin"></i></a> -->
+      </div>
+      <div class="container">
+        <div class="copyright">
+          <span>2024</span><strong class="px-1 sitename"> HeavySim</strong>©	<span>All rights reserved</span>
+        </div>
+        <div class="credits">
+          <!-- All the links in the footer should remain intact. -->
+          <!-- You can delete the links only if you've purchased the pro version. -->
+          <!-- Licensing information: https://bootstrapmade.com/license/ -->
+          <!-- Purchase the pro version with working PHP/AJAX contact form: [buy-url] -->
+          Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
+        </div>
+      </div>
+    </div>
+  </footer>
+
+  <!-- Scroll Top -->
+  <a href="#" id="scroll-top" class="scroll-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
+
+  <!-- Preloader -->
+  <div id="preloader"></div>
+
+  <!-- Vendor JS Files -->
+  <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+  <script src="assets/vendor/php-email-form/validate.js"></script>
+  <script src="assets/vendor/aos/aos.js"></script>
+
+  <!-- Main JS File -->
+  <script src="assets/js/main.js"></script>
+
 </body>
+
 </html>
