--- a/index.html
+++ b/index.html
@@ -296,7 +296,7 @@
             <div class="info-item d-flex flex-column justify-content-center align-items-center info-item-borders">
               <i class="bi bi-telephone"></i>
               <h3>Call Us</h3>
-              <p><a href="" target="_blank">+1 401-965-5511</a>
+              <p><a target="_blank" disabled>+1 401-965-5511</a>
               </p>
             </div>
           </div><!-- End Info Item -->
